added login,signup fragments with basic designs

--- a/jose2007kj/src/main/res/values/strings.xml
+++ b/jose2007kj/src/main/res/values/strings.xml
@@ -1,1 +1,31 @@
-<resources></resources>
+<resources>
+    <string name="app_name">Learning Android</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="text_view">Enter a name</string>
+    <string name="button_label">OK Done</string>
+    <string name="day_1">day_1_default</string>
+    <string name="title_activity_user_profile">User Profile</string>
+    <string name="textView5">Email Id</string>
+    <string name="textView6">Password</string>
+    <string name="editText6">Enter the email id</string>
+    <string name="editText8">Enter your password</string>
+    <string name="button">Login</string>
+    <string name="button3">Go to Login Page</string>
+    <string name="textView2">If you have not registered before please SignUp to continue</string>
+    <string name="button2">Go to Sign UP Page</string>
+    <string name="button4">Sign UP</string>
+    <string name="desc_in_signup">If you have already registered please Login</string>
+    <string name="sg_firstname">First Name</string>
+    <string name="phone_nm">Phone number</string>
+    <string name="last_name">Last Name</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="retype_password">Please re-enter password</string>
+    <string name="dob">Enter your Date of Birth</string>
+</resources>
