--- a/jose2007kj/src/main/res/values/strings.xml
+++ b/jose2007kj/src/main/res/values/strings.xml
@@ -27,5 +27,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="retype_password">Please re-enter password</string>
-    <string name="dob">Enter your Date of Birth</string>
+    <string name="dob">Select your Date of Birth</string>
 </resources>
